[package]
name = "smartcow"
version = "0.2.0"
edition = "2018"
description = "a cow for smartstrings"
readme = "README.md"
repository = "https://github.com/jbr/smartcow"
documentation = "https://docs.rs/smartcow"
license = "MIT OR Apache-2.0"
keywords = ["cow", "smartstring"]

[dependencies]
smartstring = "1.0.0"
